# SoliditySample

./: .gitignore  Makefile  pyproject.toml
contracts/: FreezingMessage.sol
tests/: conftest.py  test_FreezingMessage.py
